--- a/src/main/webapp/resources/partials/home.html
+++ b/src/main/webapp/resources/partials/home.html
@@ -1,7 +1,23 @@
+
+  
+ </br>
+</br>
+</br>  
+
+
+
 <div class="two-section" >
-   <span class="boxIcon icon_sprite icon_node1"></span>
-   <div class="boxTitle"><h2>File Options</h2></div>
-   
- WELCOME PAGE
+
 
 <div class="clear"></div>
+
+  <div style="width:300px; margin:auto;" class="btnGroup">
+        <button class="boxBtn" style="width:100%" data-ng-click="go('/inventory')"><span class="btnIcon icon_sprite icon_setup2"></span><span class="btnText">Manage Inventory</span></button>
+    </div>
+    </br>
+    
+ <div style="width:300px; margin:auto;" class="btnGroup">
+         <button class="boxBtn" style="width:100%" data-ng-click="go('/sales')"><span class="btnIcon icon_sprite icon_setup2"></span><span class="btnText">Manage Sale</span></button>
+        
+</div>
+</div>
