--- a/src/main/webapp/resources/css_sbac/core.css
+++ b/src/main/webapp/resources/css_sbac/core.css
@@ -1668,9 +1668,8 @@ th.icon_sort:after {
   top:80px;
 }
 .secContent {
-  margin: 6.0em 3em 2em 0;
-  padding: 0em 1em 1em 2em;
-  margin-left: 240px;
+  margin: 6.0em 3em 2em 1em;
+ 
 }
 .secondary .navCore span {
   height: 3em;
