--- a/src/main/webapp/resources/partials/home.html
+++ b/src/main/webapp/resources/partials/home.html
@@ -11,13 +11,18 @@
 
 <div class="clear"></div>
 
-  <div style="width:300px; margin:auto;" class="btnGroup">
+    <div style="width:300px; margin:auto;" class="btnGroup">
         <button class="boxBtn" style="width:100%" data-ng-click="go('/inventory')"><span class="btnIcon icon_sprite icon_setup2"></span><span class="btnText">Manage Inventory</span></button>
     </div>
+   
     </br>
     
- <div style="width:300px; margin:auto;" class="btnGroup">
-         <button class="boxBtn" style="width:100%" data-ng-click="go('/sales')"><span class="btnIcon icon_sprite icon_setup2"></span><span class="btnText">Manage Sale</span></button>
-        
-</div>
+	 <div style="width:300px; margin:auto;" class="btnGroup">
+	         <button class="boxBtn" style="width:100%" data-ng-click="go('/sales')"><span class="btnIcon icon_sprite icon_setup2"></span><span class="btnText">Manage Sale</span></button>
+	 </div>
+    </br>
+     <div style="width:300px; margin:auto;" class="btnGroup">
+             <button class="boxBtn" style="width:100%" data-ng-click="go('/invoice')"><span class="btnIcon icon_sprite icon_setup2"></span><span class="btnText">generateInvoice</span></button>
+     </div>
+
 </div>
